# project_calib_projfusion

./: .env.serve  .gitignore  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: default.toml  paper.toml
docker/: Dockerfile  compose.yaml  docker-compose.yml
docs/: model_card.md
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: build_kitti_cache.py  build_report.py  evaluate.py  export_model.py  export_release.py  run_eval.py  sync_cuda.sh  train.py  validate_prod.py
scripts/launch/: calib_projfusion.launch.py
src/anima_calib_projfusion/: __init__.py  config.py  device.py  serve.py  train.py  (+1 more)
tasks/: PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md
tests/: test_api_app.py  test_benchmark_runner.py  test_checkpoint_adapter.py  test_config.py  test_data_splits.py  test_encoders.py  test_geometry_se3.py  test_inference_pipeline.py  test_metrics.py  test_positional_encoding.py  test_projection.py  test_projfusion_forward.py  test_release_bundle.py  test_report_builder.py  test_ros2_bridge.py  test_service_contract.py  test_visualization.py
(+32 files in other folders)
